--- a/styles/styles_header.css
+++ b/styles/styles_header.css
@@ -7,7 +7,7 @@
 /*=================== HEADER ==========================*/
 #header {
     position: absolute;
-    width: 1366px;
+    width: 100%;
     height: 5rem;
     
     background: linear-gradient(90deg, #4E5CBC 22%, rgba(67, 114, 196, 0.97) 79.28%);
@@ -92,10 +92,10 @@ nav ul li:hover{
     background: white;
 
     position: absolute;
-    padding-top: 3px;
-    padding-bottom: 11px;
-    padding-left: 10px;
-    padding-right: 9px;
+    padding-top: 0.1875rem;
+    padding-bottom: 0.6875rem;
+    padding-left: 0.625rem;
+    padding-right: 0.5625rem;
 }
 
 nav ul li.outros:hover {
@@ -114,39 +114,39 @@ nav ul li.missao:hover{
 }
 
 .hiv {
-    margin-top: -49.8px;
-    margin-left: 324px;
-    margin-right: 970px;
+    margin-top: -3.1125rem;
+    margin-left: 20.25rem;
+    margin-right: 51.75rem;
 }
 
 .malaria {
-    margin-left: 476px;
+    margin-left: 29.75rem;
     margin-right: 828px;
-    margin-top: -49.8px;
+    margin-top: -3.1125rem;
 }
 
 .tuberculose {
-    margin-top: -49.8px;
-    margin-left: 618px;
-    margin-right: 650px
+    margin-top: -3.1125rem;
+    margin-left: 38.625rem;
+    margin-right: 40.625rem;
 }
 
 .outros {
-    margin-top: -49.8px;
-    margin-left:  796px;
-    margin-right: 443px;
+    margin-top: -3.1125rem;
+    margin-left:  49.75rem;
+    margin-right: 27.6875rem;
 }
 
 .somos {
-    margin-top: -49.8px;
-    margin-left: 1003px;
-    margin-right: 250px;
+    margin-top: -3.1125rem;
+    margin-left: 62.6875rem;
+    margin-right: 15.625rem;
 }
 
 .missao {
-    margin-top: -49.8px;
-    margin-left: 1196px;
-    margin-right:  37px;
+    margin-top: -3.1125rem;
+    margin-left: 74.75rem;
+    margin-right:  2.3125rem;
 }
 
 
