--- a/styles/StylesHeader_footer.css
+++ b/styles/StylesHeader_footer.css
@@ -7,7 +7,7 @@
 /*=================== HEADER ==========================*/
 #header {
     position: absolute;
-    width: 1366px;
+    width: 100%;
     height: 5rem;
     
     background: linear-gradient(90deg, #4E5CBC 22%, rgba(67, 114, 196, 0.97) 79.28%);
@@ -150,5 +150,11 @@ nav ul li.missao:hover{
 }
 
 
+/*=================== FOOTER ==========================*/
 
-
+#footer {
+    width: 100%;
+    height: 415px;
+    margin-top: 366px;
+    background: linear-gradient(90deg, #4E5CBC 22%, rgba(67, 114, 196, 0.97) 79.28%);
+}
