--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -146,12 +146,30 @@ nav ul li.missao:hover{
     margin-right: -900px;
 }
 
+/*=================== Main ==========================*/
+main {
+    padding-top: 80px;
 
+    height: 10000px;
+}
 /*=================== FOOTER ==========================*/
 
-#footer {
-    width: 100%;
-    height: 415px;
-    margin-top: 366px;
-    background: linear-gradient(90deg, #4E5CBC 22%, rgba(67, 114, 196, 0.97) 79.28%);
+/*=================== RESPUSIVIDADE  ==========================*/
+
+@media (min-width: 1920px) {
+
+    nav ul li.outros:hover {
+        position: absolute !important;
+        width: 7.8%;
+    }
+    
+    nav ul li.somos:hover{
+        position: absolute !important;
+        width: 7%;
+    }
+    
+    nav ul li.missao:hover{
+        position: absolute !important;
+        width: 8%;
+    }
 }
