--- a/styles/Styles-OutrasDoencas.css
+++ b/styles/Styles-OutrasDoencas.css
@@ -86,6 +86,7 @@ nav ul li a:hover::after {
 nav ul li {
     position: relative;
 }
+
 nav ul li:hover{
     content: '';
     background: white;
@@ -93,6 +94,19 @@ nav ul li:hover{
     position: absolute;
     padding-top: 0.1875rem;
     padding-bottom: 0.6875rem;
+    padding-left: 0.625rem;
+    padding-right: 0.5625rem;
+}
+
+nav ul li.outros a {
+    color: #4D61BE;
+}
+
+nav ul li.outros {
+    background: white;
+    
+    position: absolute;
+    
     padding-left: 0.625rem;
     padding-right: 0.5625rem;
 }
