pedi ajuda depois

--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -20,7 +20,8 @@
     position: absolute;
     width: 100%;
     height: 5rem;
-    
+    align-items: center;
+
     background: white;
 }
 
@@ -56,35 +57,19 @@ nav ul li{
 nav ul li a{
     color: black;
     position: relative;
-    display: inline-block;
+    display: inline;
     
+    padding: 5px 40px
 }
+
 
 nav ul li a:hover {
     
     font: 500 19px 'medium', sans-serif;
     transition: 0.2s;
 
-}
-
-ul li a::after {
-    content: '';
-    width: 100%;
-    height: 40px;
+    background-color: #BEBEBE;
     border-radius: 20px;
-    background-color: #EEEEEE;
-    opacity: 0%;
-
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-
-    transition: 0.2s;
-}
-
-
-ul li a:hover::after {
-    opacity: 100%;
 }
 
 .home {
@@ -109,10 +94,42 @@ ul li a:hover::after {
     margin-left: 1036px;
     margin-top: -50px;
     margin-bottom: 25px;
+    margin-right: -289px;
+}
+
+.icon-Arrow-1 {
+    align-items: center;
+    margin-left: 575px;
+    margin-top: -20px;
+    margin-bottom: 12px;
+}
+
+.toggle:hover {
+    background-color: #BEBEBE;
+    
+}
+
+.menu ul li.doenca:hover>ul.dropdown {
+    display:block;
 }
 
 .dropdown {
-    display: none;
+    align-items: center;
+    text-align: center; 
+    
+}
+
+.dropdown li a{
+    border-bottom: 1px solid #BEBEBE;
+}
+
+.dropdown li {
+    position: relative;
+    margin-top: 10px;
+}
+
+.dropdown li a:hover {
+    border-radius: 0 !important;
 }
 
 .tracinho {
