--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -39,16 +39,22 @@
 }
 
 .menu {
-    margin-right: 114px;
+    display: flex;
+    gap: 115px;
 }
 
 nav {
     align-items: center;
 }
 
+nav ul {
+    margin-left: 328px;
+    margin-top: -60px
+}
+
 nav ul li{
     list-style: none;
-    margin-right: 114px;
+    
 
     font: 400 19px 'regular', sans-serif;
 
@@ -59,7 +65,7 @@ nav ul li a{
     position: relative;
     display: inline;
     
-    padding: 5px 40px;
+    padding: 5px 30px;
     transition: 0.2s;
 }
 
@@ -77,7 +83,7 @@ nav ul li.doenca a{
     position: relative;
     display: inline-block !important;
     
-    padding: 2px 20px;
+    
     transition: 0.2s;
 }
 
@@ -86,28 +92,20 @@ nav ul li.doenca a:hover {
 }
 
 .home {
-    margin-left: 328px;
-    margin-top: -50px;
-    margin-bottom: 24px;
+  
 } 
 
 .doenca {
-    margin-left: 533px;
-    margin-top: -50px;
-    margin-bottom: 25px;
+    margin-top: -5px;
 }
 
 .missao {
-    margin-left: 731px;
-    margin-top: -80px;
-    margin-bottom: 25px;
+    
+
 }
 
 .sobre {
-    margin-left: 1036px;
-    margin-top: -50px;
-    margin-bottom: 25px;
-    margin-right: -289px;
+    display: block
 }
 
 .icon-Arrow-1 {
@@ -118,14 +116,17 @@ nav ul li.doenca a:hover {
 }
 
 .dropdown {
+    position: absolute;
     text-align: center; 
-    margin-left: -380px;
+    margin-left: -35px;
+    margin-top: -5px;
     display: none;
 }
 
 .dropdown li {
     position: relative;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .menu li.doenca:hover > .dropdown {
@@ -133,9 +134,9 @@ nav ul li.doenca a:hover {
 }
 
 .tracinho {
-    margin-top: 35px;
     width: 100%;
     border-bottom: 1px solid #BEBEBE;
+    position: absolute;
 }
 /*=================== Main ==========================*/
 main {
