--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -156,9 +156,8 @@ main {
 
 @media (min-width: 1920px) {
 
+    .menu {
+        margin-left: 500px;
+    }
     
-}
-
-@media (min-width: 1360) {
-
 }
