--- a/styles/Styles-Malaria.css
+++ b/styles/Styles-Malaria.css
@@ -160,9 +160,8 @@ main {
 
 @media (min-width: 1920px) {
 
+    .menu {
+        margin-left: 500px;
+    }
     
-}
-
-@media (min-width: 1360) {
-
 }
