--- a/styles/Styles-OutrasDoencas.css
+++ b/styles/Styles-OutrasDoencas.css
@@ -160,9 +160,9 @@ main {
 
 @media (min-width: 1920px) {
 
+    .menu {
+        margin-left: 500px;
+    }
     
 }
 
-@media (min-width: 1360) {
-
-}
