--- a/styles/Styles-QuemSomos.css
+++ b/styles/Styles-QuemSomos.css
@@ -155,9 +155,9 @@ main {
 
 @media (min-width: 1920px) {
 
+    .menu {
+        margin-left: 500px;
+    }
     
 }
 
-@media (min-width: 1360) {
-
-}
