--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -148,8 +148,9 @@ nav ul li.doenca a:hover {
 
 /*=================== Main ==========================*/
 main {
-    
+    padding-top: 95px
 }
+
 /*=================== FOOTER ==========================*/
 
 /*=================== RESPUSIVIDADE  ==========================*/
