--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -147,8 +147,9 @@ nav ul li.doenca a:hover {
 }
 /*=================== Main ==========================*/
 main {
-    
+    padding-top: 95px
 }
+
 /*=================== FOOTER ==========================*/
 
 /*=================== RESPUSIVIDADE  ==========================*/
