--- a/styles/Styles-Tuberculose.css
+++ b/styles/Styles-Tuberculose.css
@@ -152,8 +152,9 @@ nav ul li.doenca a:hover {
 }
 /*=================== Main ==========================*/
 main {
-    
+    padding-top: 95px
 }
+
 /*=================== FOOTER ==========================*/
 
 /*=================== RESPUSIVIDADE  ==========================*/
