--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -120,6 +120,7 @@ nav ul li.doenca a:hover {
     margin-left: -35px;
     margin-top: -5px;
     display: none;
+    box-shadow: 0px 1px 3px 1px #00000015;
 }
 
 .dropdown li {
