--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -15,6 +15,11 @@
     src: url(../fonts/MADEOkineSansPERSONALUSE-Medium.otf) format('opentype');
 }
 
+@font-face {
+    font-family: 'light';
+    src: url(..//fonts/MADEOkineSansPERSONALUSE-Light.otf) format('opentype');
+}
+
 /*=================== HEADER ==========================*/
 #header {
     position: absolute;
@@ -152,6 +157,21 @@ main {
     padding-top: 95px
 }
 
+.titulo {
+    text-align: center;
+    margin-top: 219px;
+    font-family: 'regular', sans-serif;
+    font-size: 40px;
+}
+
+.texto {
+    font-family: 'light', sans-serif;
+    font-size: 20px;
+}
+
+.valor {
+    margin-left: 20px;
+}
 /*=================== FOOTER ==========================*/
 
 /*=================== RESPUSIVIDADE  ==========================*/
