--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -167,12 +167,62 @@ main {
 .texto {
     font-family: 'light', sans-serif;
     font-size: 20px;
+    margin-left: 218px;
+}
+
+.txt1 {
+    margin-top: 61px;
 }
 
 .valor {
-    margin-left: 20px;
+    margin-left: 245px;
 }
+
+ul.valor li {
+    font-family: 'light', sans-serif; 
+    font-size: 20px;
+}
+
+p.topo {
+    text-align: center;
+    transform: translateY(395px);
+    margin-top: 298px;
+}
+
+p.topo a {
+    text-decoration: none;
+    font-family: 'thin';
+    color: black;
+    font-size: 25px
+}
+
 /*=================== FOOTER ==========================*/
+
+footer {
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 115px;
+    margin-top: 410px;
+}
+
+p.direitos {
+    padding-top: 46px;
+    margin-left: 115px;
+    font-family: 'Inter', sans-serif;
+    color: black;
+    font-size: 16px;
+}
+
+.icon {
+    display: inline-block;
+    margin-left: 24px;
+    margin-right: 24px; 
+}
+
+.social {
+    margin-left: 900px;
+    margin-top: -16px;
+}
 
 /*=================== RESPUSIVIDADE  ==========================*/
 
