colocando animações nos icones

--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -213,6 +213,14 @@ p.topo a {
     color: black;
     font-size: 25px
 }
+
+.social a {
+    color: black;
+}
+
+.social a i:hover {
+    transform: translateY(-4px);
+}
 /*=================== FOOTER ==========================*/
 
 footer {
