--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -196,6 +196,14 @@ p.topo a {
     font-size: 25px
 }
 
+.social a {
+    color: black;
+}
+
+.social a i:hover {
+    transform: translateY(-4px);
+}
+
 /*=================== FOOTER ==========================*/
 
 footer {
