--- a/styles/Styles-Home.css
+++ b/styles/Styles-Home.css
@@ -20,6 +20,11 @@
     font-family: 'thin';
     src: url(../fonts/MADEOkineSansPERSONALUSE-Thin.otf) format('opentype');
 }
+
+@font-face {
+    font-family: 'black';
+    src: url(../fonts/MADEOkineSansPERSONALUSE-Black.otf) format('opentype');
+}
 /*=================== HEADER ==========================*/
 
 #header {
@@ -46,7 +51,7 @@
 
 .menu {
     display: flex;
-    gap: 115px;
+    gap: 150px;
 }
 
 nav {
@@ -92,8 +97,8 @@ nav ul li a:hover {
 }
 
 .sobre {
-  position: absolute;
-  margin-left: 550px;
+    position: absolute;
+    margin-left: 580px; 
 }
 
 .tracinho {
@@ -132,14 +137,31 @@ input {
     width: 970px;
     height: 65px;
     margin-left: 233px;
+    font: 400 20px 'Regular', sans-serif;
+    color: #BBBBBB;
+    background: #F5F5F5;
+    border: 1px solid #E4E4E4;
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
 }
 
-.botao {
-    margin: auto;
-    text-align: center;
-    background: #C2C2C2;
-    width: 250px;
-    height: 50px;
+.button {
+    background-color: #D9D9D9;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 593px;
+    margin-top: 20px;
+    padding: 10px 50px;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: black;
+    font: 900 20px 'black', sans-serif;
+    color: #747474;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
+}
+
+.button:hover {
+    color: black;
 }
 
 section.cards img {
