--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -122,7 +122,7 @@ nav ul li.doenca a:hover {
 .dropdown {
     position: absolute;
     text-align: center; 
-    margin-left: -35px;
+    margin-left: -20px;
     margin-top: -5px;
     display: none;
 }
@@ -155,6 +155,11 @@ nav ul li.doenca a:hover {
 /*=================== Main ==========================*/
 main {
     padding-top: 95px
+}
+
+.img {
+    margin-top: 150px;
+    margin-left: 60px;
 }
 
 /*=================== FOOTER ==========================*/
