fazendo a parte das doencas

--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -15,6 +15,11 @@
     src: url(../fonts/MADEOkineSansPERSONALUSE-Medium.otf) format('opentype');
 }
 
+@font-face {
+    font-family: 'thin';
+    src: url(../fonts/MADEOkineSansPERSONALUSE-Thin.otf) format('opentype');
+}
+
 /*=================== HEADER ==========================*/
 #header {
     position: absolute;
@@ -159,10 +164,156 @@ main {
 
 .img {
     margin-top: 150px;
-    margin-left: 60px;
+    margin-left: 150px; 
+}
+
+.container {
+    width: 100%;
+    max-width: 75rem;
+    margin-left: 190px;
+    padding: 0 1.5rem;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.accordion-item {
+    background-color: #D9D9D9;
+    margin-bottom: 21px;
+    padding: 1rem 0;
+    border-radius: 20px;
+    box-shadow: .5rem 2px .5rem rgba(0, 0, 0, 0.082);
+}
+
+.accordion-link {
+    text-decoration: none;
+    font: 400 25px 'Regular', sans-serif;
+    color: black;
+}
+
+.answer {
+    font: 400 15px 'regula', sans-serif;
+    font-style: normal;
+    text-align: justify;
+    padding: 41px;
+    display: none;
+    transition: 650ms;
+}
+
+.answer p {
+    color: black;
+}
+
+.accordion-item:target .answer {
+    display: block;
+}
+
+.accordion-item:target {
+    background: linear-gradient(180deg, rgba(149, 149, 149, 0.54) 0%, rgba(217, 217, 217, 0.135) 100%);
+}
+
+.fontes {
+    
+    margin-left: 210px;
+    background-color: #D9D9D9;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 1160px;
+    padding: 0 1rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 20px;
+}
+
+.fontes b {
+    font: 400 24px 'Regular', sans-serif;
+}
+
+.fontes a {
+    font: 100 24px 'Thin', sans-serif;
+    text-decoration: none;
+    color: black;
+}
+
+.fontes a:hover {
+    color: #000000a1
+}
+
+input {
+    text-align: center;
+    width: 970px;
+    height: 65px;
+    margin-left: 300px;
+    font: 400 20px 'Regular', sans-serif;
+    color: #BBBBBB;
+    background: #F5F5F5;
+    border: 1px solid #E4E4E4;
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
+}
+
+.button {
+    background-color: #D9D9D9;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 680px;
+    margin-top: 20px;
+    padding: 10px 50px;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: black;
+    font: 900 20px 'black', sans-serif;
+    color: #747474;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
+}
+
+.button:hover {
+    color: black;
+}
+
+p.topo {
+    text-align: center;
+    margin-top: 298px;
+}
+
+p.topo a {
+    text-decoration: none;
+    font-family: 'thin';
+    color: black;
+    font-size: 25px
 }
 
 /*=================== FOOTER ==========================*/
+footer {
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 115px;
+}
+
+p.direitos {
+    padding-top: 46px;
+    margin-left: 115px;
+    font-family: 'Inter', sans-serif;
+    color: black;
+    font-size: 16px;
+}
+
+.social a {
+    color: black;
+}
+
+.social a i:hover {
+    transform: translateY(-4px);
+}
+.icon {
+    display: inline-block;
+    margin-left: 24px;
+    margin-right: 24px; 
+}
+
+.social {
+    margin-left: 900px;
+    margin-top: -16px;
+}
 
 /*=================== RESPUSIVIDADE  ==========================*/
 
