--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -164,13 +164,18 @@ main {
 
 .img {
     margin-top: 150px;
-    margin-left: 150px; 
+    margin-left: 150px;
+}
+
+.img  img {
+    width: 100%;
+    max-width: 1100px;
 }
 
 .container {
     width: 100%;
-    max-width: 75rem;
-    margin-left: 190px;
+    max-width: 72rem;
+    margin-left: 130px;
     padding: 0 1.5rem;
     text-align: center;
     margin-top: 20px;
@@ -213,11 +218,11 @@ main {
 
 .fontes {
     
-    margin-left: 210px;
+    margin-left: 150px;
     background-color: #D9D9D9;
     margin-bottom: 20px;
     text-align: center;
-    width: 1160px;
+    width: 1100px;
     padding: 0 1rem;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -229,7 +234,7 @@ main {
 }
 
 .fontes a {
-    font: 100 24px 'Thin', sans-serif;
+    font: 100 24px 'thin', sans-serif;
     text-decoration: none;
     color: black;
 }
@@ -242,7 +247,7 @@ input {
     text-align: center;
     width: 970px;
     height: 65px;
-    margin-left: 300px;
+    margin-left: 230px;
     font: 400 20px 'Regular', sans-serif;
     color: #BBBBBB;
     background: #F5F5F5;
@@ -255,7 +260,7 @@ input {
     background-color: #D9D9D9;
     display: inline-flex;
     align-items: center;
-    margin-left: 680px;
+    margin-left: 600px;
     margin-top: 20px;
     padding: 10px 50px;
     border-radius: 0.25rem;
@@ -277,9 +282,8 @@ p.topo {
 
 p.topo a {
     text-decoration: none;
-    font-family: 'thin';
-    color: black;
-    font-size: 25px
+    font: 100 25px 'thin', sans-serif;
+    color: black;  
 }
 
 /*=================== FOOTER ==========================*/
