--- a/styles/Styles-Tuberculose.css
+++ b/styles/Styles-Tuberculose.css
@@ -119,10 +119,14 @@ nav ul li.doenca a:hover {
     font-size: 15px;
 }
 
+.tuberculose {
+    padding: 0 .1rem
+}
+
 .dropdown {
     position: absolute;
     text-align: center; 
-    margin-left: -35px;
+    margin-left: -20px;
     margin-top: -5px;
     display: none;
 }
@@ -159,13 +163,18 @@ main {
 
 .img {
     margin-top: 150px;
-    margin-left: 150px; 
+    margin-left: 150px;
+}
+
+.img  img {
+    width: 100%;
+    max-width: 1100px;
 }
 
 .container {
     width: 100%;
-    max-width: 75rem;
-    margin-left: 190px;
+    max-width: 72rem;
+    margin-left: 130px;
     padding: 0 1.5rem;
     text-align: center;
     margin-top: 20px;
@@ -204,6 +213,76 @@ main {
 
 .accordion-item:target {
     background: linear-gradient(180deg, rgba(149, 149, 149, 0.54) 0%, rgba(217, 217, 217, 0.135) 100%);
+}
+
+.fontes {
+    
+    margin-left: 150px;
+    background-color: #D9D9D9;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 1100px;
+    padding: 0 1rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 20px;
+}
+
+.fontes b {
+    font: 400 24px 'Regular', sans-serif;
+}
+
+.fontes a {
+    font: 100 24px 'thin', sans-serif;
+    text-decoration: none;
+    color: black;
+}
+
+.fontes a:hover {
+    color: #000000a1
+}
+
+input {
+    text-align: center;
+    width: 970px;
+    height: 65px;
+    margin-left: 230px;
+    font: 400 20px 'Regular', sans-serif;
+    color: #BBBBBB;
+    background: #F5F5F5;
+    border: 1px solid #E4E4E4;
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
+}
+
+.button {
+    background-color: #D9D9D9;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 600px;
+    margin-top: 20px;
+    padding: 10px 50px;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: black;
+    font: 900 20px 'black', sans-serif;
+    color: #747474;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.25);
+}
+
+.button:hover {
+    color: black;
+}
+
+p.topo {
+    text-align: center;
+    margin-top: 298px;
+}
+
+p.topo a {
+    text-decoration: none;
+    font: 100 25px 'thin', sans-serif;
+    color: black;  
 }
 
 /*=================== FOOTER ==========================*/
