--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -129,6 +129,7 @@ nav ul li.doenca a:hover {
     text-align: center; 
     margin-left: -20px;
     margin-top: -5px;
+    width: 175px;
     display: none;
 }
 
