--- a/styles/Styles-Malaria.css
+++ b/styles/Styles-Malaria.css
@@ -15,6 +15,10 @@
     src: url(../fonts/MADEOkineSansPERSONALUSE-Medium.otf) format('opentype');
 }
 
+@font-face {
+    font-family: 'thin';
+    src: url(../fonts/MADEOkineSansPERSONALUSE-Thin.otf) format('opentype');
+}
 /*=================== HEADER ==========================*/
 #header {
     position: absolute;
@@ -124,6 +128,7 @@ nav ul li.doenca a:hover {
     text-align: center; 
     margin-left: -20px;
     margin-top: -5px;
+    width: 175px;
     display: none;
 }
 
