--- a/styles/Styles-MissaoEValores.css
+++ b/styles/Styles-MissaoEValores.css
@@ -124,6 +124,7 @@ nav ul li.doenca a:hover {
     text-align: center; 
     margin-left: -35px;
     margin-top: -5px;
+    width: 175px;
     display: none;
 }
 
