--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -105,7 +105,7 @@ nav ul li.doenca a:hover {
     border-radius: 20px;
 }
 
-.hiv a{
+.hiv a {
     font: 500 19px 'medium', sans-serif;
 
     background-color: #EEEEEE;
@@ -228,6 +228,16 @@ main {
 .answer p a {
     text-decoration: none;
     color: blue;
+}
+
+.answer .important {
+    background-color: #BEBEBE;
+    padding: 1rem;
+    border-radius: 20px;
+}
+
+.answer .bold {
+    color:#272626;
 }
 
 .answer p a:hover {
