--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -244,6 +244,12 @@ main {
     color:rgba(0, 0, 255, 0.596);
 }
 
+th, td {
+    border-bottom: 1px solid #BEBEBE;
+    padding: 5px;
+    text-align: center;
+}
+
 .accordion-item:target .answer {
     display: block;
 }
