--- a/styles/Styles-Tuberculose.css
+++ b/styles/Styles-Tuberculose.css
@@ -175,6 +175,7 @@ main {
 .img  img {
     width: 100%;
     max-width: 1100px;
+    align-items: center;
 }
 
 .container {
@@ -229,6 +230,35 @@ main {
     color: black;
 }
 
+.answer p a {
+    text-decoration: none;
+    color: blue;
+}
+.azul {
+    text-decoration: none;
+    color: blue;
+}
+
+.answer .important {
+    background-color: #BEBEBE;
+    padding: 1rem;
+    border-radius: 20px;
+}
+
+.answer .bold {
+    color:#272626;
+}
+
+.answer p a:hover {
+    color:rgba(0, 0, 255, 0.596);
+}
+
+th, td {
+    border-bottom: 1px solid #BEBEBE;
+    padding: 5px;
+    text-align: center;
+}
+
 .accordion-item:target .answer {
     display: block;
 }
@@ -244,7 +274,6 @@ main {
     margin-bottom: 20px;
     text-align: center;
     width: 1100px;
-    padding: 0 1rem;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 20px;
@@ -306,7 +335,6 @@ p.topo a {
     font: 100 25px 'thin', sans-serif;
     color: black;  
 }
-
 /*=================== FOOTER ==========================*/
 footer {
     background-color: #D9D9D9;
