--- a/styles/Styles-HIV.css
+++ b/styles/Styles-HIV.css
@@ -165,17 +165,17 @@ main {
 
 .img {
     margin-top: 150px;
-    margin-left: 140px;
+    text-align: center;
 }
 
 .img  img {
-    width: 100%;
-    max-width: 1100px;
+    width: 1100px;
+   
 }
 
 .container {
     width: 100%;
-    max-width: 72rem;
+    width: 71rem;
     margin-left: 110px;
     padding: 0 1.5rem;
     text-align: center;
@@ -365,8 +365,40 @@ p.direitos {
 
 @media (min-width: 1920px) {
 
+    /*============= header ================*/
     .menu {
         margin-left: 500px;
     }
+
+    /*============= main ================*/
+    .img {
+        text-align: center;
+    }
+
+    .img img {
+        width: 100%;
+        width: 1249px;
+    }
+
+    .container {
+        margin-left: 390px;
+    }
+
+    .fontes {
+        margin-left: 420px;
+    }
+
+    input {
+        margin-left: 500px;
+    }
     
+    .button {
+        margin-left: 860px;
+    }
+    
+   /*============= footer ================*/
+
+   .social {
+    margin-left: 1450px;
+   }
 }
