--- a/styles/Styles-Tuberculose.css
+++ b/styles/Styles-Tuberculose.css
@@ -169,18 +169,17 @@ main {
 
 .img {
     margin-top: 150px;
-    margin-left: 140px;
+    text-align: center;
 }
 
 .img  img {
-    width: 100%;
-    max-width: 1100px;
-    align-items: center;
+    width: 1100px;
+   
 }
 
 .container {
     width: 100%;
-    max-width: 72rem;
+    width: 71rem;
     margin-left: 110px;
     padding: 0 1.5rem;
     text-align: center;
@@ -268,12 +267,11 @@ th, td {
 }
 
 .fontes {
-    
     margin-left: 140px;
     background-color: #D9D9D9;
     margin-bottom: 20px;
     text-align: center;
-    width: 1100px;
+    width: 1085px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 20px;
@@ -310,7 +308,7 @@ input {
     background-color: #D9D9D9;
     display: inline-flex;
     align-items: center;
-    margin-left: 575px;
+    margin-left: 580px;
     margin-top: 20px;
     padding: 10px 50px;
     border-radius: 0.25rem;
@@ -357,6 +355,7 @@ p.direitos {
 .social a i:hover {
     transform: translateY(-4px);
 }
+
 .icon {
     display: inline-block;
     margin-left: 24px;
@@ -372,8 +371,40 @@ p.direitos {
 
 @media (min-width: 1920px) {
 
+    /*============= header ================*/
     .menu {
         margin-left: 500px;
     }
+
+    /*============= main ================*/
+    .img {
+        text-align: center;
+    }
+
+    .img img {
+        width: 100%;
+        width: 1249px;
+    }
+
+    .container {
+        margin-left: 390px;
+    }
+
+    .fontes {
+        margin-left: 420px;
+    }
+
+    input {
+        margin-left: 500px;
+    }
     
+    .button {
+        margin-left: 860px;
+    }
+    
+   /*============= footer ================*/
+
+   .social {
+    margin-left: 1450px;
+   }
 }
